fix column gap mixin

--- a/css/mixins.less
+++ b/css/mixins.less
@@ -388,7 +388,7 @@
 }
 
 .column-gap(@columnGap: normal) {
-	webkit-column-gap: @columnGap;
+	-webkit-column-gap: @columnGap;
 	-moz-column-gap: @columnGap;
 	-ms-column-gap: @columnGap;
 	column-gap: @columnGap;
